--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -982,10 +982,9 @@
   <header class='app-header'>
     <div class='brand-block'>
       <img class='brand-logo' src='/static/brand/logo-full.svg' alt='Friends of Bon Echo Park logo'>
-      <div>
+      <div class='brand-copy'>
         <p class='brand-kicker'>Friends of Bon Echo Park</p>
         <h1 class='brand-title'>FOBE Scheduler Workspace</h1>
-        <p class='brand-subtitle'>Prototype scheduling console</p>
       </div>
     </div>
     <div id='workspace_tools' class='workspace-tools hidden'>
