--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>FOBE Scheduler (local)</title>
+<title>FOBE Scheduler</title>
 <link rel='icon' type='image/svg+xml' href='/static/brand/favicon.svg'>
 <link rel='stylesheet' href='/static/css/tokens.css'>
 <link rel='stylesheet' href='/static/css/components.css'>
